feature(jdk-17): Fixing class export for java 17.